# legged_gym

./: .gitignore  README.md  pyproject.toml
legged_gym/: __init__.py
legged_gym/envs/: __init__.py
legged_gym/envs/a1/: a1_config.py  a1_flat_config.py
legged_gym/envs/base/: base_task.py  legged_robot.py  legged_robot_config.py
legged_gym/scripts/: play.py  train.py
legged_gym/utils/: __init__.py  helpers.py  task_registry.py
